# src/controller/validation/auth.validation.ts
@@ -1,13 +1,20 @@
 import BaseYup from "../contract/baseValidator.contract";
 
 export const signupValidationSchema = BaseYup.object({
-  fullName: BaseYup.string()
-    .min(2, "Too short")
-    .max(30, "Too long")
-    .required("Please Enter Name"),
+  firstName: BaseYup.string()
+    .min(2, "First name is too short")
+    .max(30, "First name is too long")
+    .required("Please enter your first name"),
+
+  lastName: BaseYup.string()
+    .min(2, "Last name is too short")
+    .max(30, "Last name is too long")
+    .required("Please enter your last name"),
+
   emailName: BaseYup.email("Please Enter Valid Email").required(
     "Please Enter Email"
   ),
+
   emailPassword: BaseYup.string()
     .min(6, "Password must be at least 6 characters")
     .matches(/[a-z]/, "Password must contain at least 1 lower case letter") // for lowercase letters
@@ -15,12 +22,15 @@ export const signupValidationSchema = BaseYup.object({
     .matches(/\d/, "Password must contain at least 1 number") // for numbers
     .matches(/[\W_]/, "Password must contain at least 1 special character") // for special characters
     .required("Please Enter Password"),
+
   emailConfirmPassword: BaseYup.string()
     .oneOf([BaseYup.ref("emailPassword")], "Password must match")
     .required("Enter Confirm Password"),
+
   gender: BaseYup.string()
     .oneOf(["male", "female", "other"], "Invalid gender selection")
     .required("Please Enter Your Gender"),
+
   emailDob: BaseYup.date()
     .required("Please select your date of birth")
     .max(new Date(), "Date of birth cannot be in the future"),
@@ -33,7 +43,9 @@ export const loginValidationSchema = BaseYup.object({
       "Please Enter Valid Email"
     )
     .required("Please Enter Email"),
+
   emailPassword: BaseYup.string().required("Please Enter Password"),
+
   emailRemember: BaseYup.bool(),
 });
 
