# src/dto/user/user.dto.ts
@@ -3,10 +3,15 @@ import { User } from "@prisma/client";
 class _UserDTO {
   single(user: User) {
     return {
-      fullName: user.fullName,
+      firstName: user.firstName,
+      lastName: user.lastName,
       email: user.email,
       gender: user.gender,
       dob: user.dob.toISOString(),
+      address: user.address,
+      phone: user.phone,
+      title: user.title,
+      avatarUrl: user.avatarUrl,
       createdAt: user.createdAt.toISOString(),
     };
   }
